addons/openerp/static/css/screen.css
/*
 * Project:   OpenERP
 * Date:      2010/03/16
 * ---------------------------------------- */

* {
    margin: 0;
    padding: 0;
}

html {
    height: 100%;
    margin: 0 0 1px;
    font-size: 100.01%;
}

body {
    height: 100%;
    background: #f0eeee;
    font-size: 62.5%;
}

* html body {
    behavior: url("styles/csshover.htc");
}

@media only screen and (max-device-width: 480px) {
    html {
        -webkit-text-size-adjust: none;
    }
}

body,textarea,input,select,option {
    color: #1f1f1f;
    font-family: "Myriad Pro", "Lucida Grande", "Lucida Sans Unicode", "Droid Sans", sans-serif;
    line-height: 1.25;
}

/*
body,textarea,input,select,option,button {
    color: #1f1f1f;
    font-family: Myriad Pro, Lucida Grande, Lucida Sans Unicode, sans-serif;
    line-height: 1.25;
}
*/
li,dt,dd,p,th,td,caption,pre {
    font-size: 1em;
}

/*ul,ol,dl,pre,h1,h2,h3,h4,h5,h6 {
    margin-bottom: 10px;
}*/

a {
    color: #555;
    text-decoration: none;
}

a:hover,a:focus,a:active {
    text-decoration: none;
}

ul,ol,dd,blockquote {
    padding-left: 40px;
}

ul ul,ol ol,ul ol,ol ul {
    margin-bottom: 0;
}

li *,li p,li li,dt *,dd *,p *,th *,td * {
    font-size: 1em;
}

img {
    border: none;
    -ms-interpolation-mode: bicubic;
}

.feature-image{
	padding: 15px 0 0;
	text-align: right;
	vertical-align: top;
}

.feature-description{
	padding: 15px 0 0 10px;
	text-align: left;
	vertical-align: top;
}

pre {
    font-family: "Courier New", monospace;
    white-space: pre-wrap;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

/*
button {
    overflow: visible;
    padding: 0 10px;
    cursor: pointer;
}

button::-moz-focus-inner {
    padding: 0;
    border: none;
}
*/
hr {
    overflow: hidden;
    height: 1px;
    margin: 15px 0 !important;
    margin: -5px 0 8px;
    padding: 0;
    border: none;
    background-color: #ccc;
    color: #ccc;
}

*:first-child+html hr {
    margin: -7px 0 8px !important;
}

.offset {
    position: absolute !important;
    left: -10001px !important;
    overflow: hidden !important;
}

/* LAYOUT
------------------------------------------- */
#root {
    height: 100%;
}

#top {
    background: url(../images/top-bg-a.gif) scroll repeat-x top #7d7b7b;
    color: #fff;
    text-transform: uppercase;
    letter-spacing: 0.5px;
    text-shadow: #333 0 1px 0;
}

#top, p#cmp_logo {
    height: 65px;
}

div #content {
	float: left;
	width: 100%;
}

#footer_section {
	clear: left;
	vertical-align: bottom;
}

#company_logo {
    padding: 10px 0;
    width: 100%;
}

#top table td {
    padding: 0;
}

p#cmp_logo {
    float: left;
    width: 174px;
    margin: 0 10px 0 0;
    padding: 0 0 0 10px;
    background: url(../images/logo-bg.png) repeat-y;
    line-height: 50px;
}

#title-menu {
    float: left;
    margin: 0;
    padding: 4px 0;
    background: none;
    color: #fff;
    font-size: 1em;
    font-weight: bold;
    text-shadow: #111 0 1px 0;
}

#title-menu small {
    display: block;
    font-size: 0.9em;
    color: #ccc;
    font-weight: normal;
}

#corner {
    float: right;
}

#corner a {
    color: #fff;
    text-decoration: none;
}

#corner p.name {
    float: left;
    height: 34px;
    margin: 0;
    padding: 0 2px 0 7px;
    background: url(../images/top-sep-a.png) no-repeat;
    line-height: 34px;
    font-size: 1em;
    text-transform: uppercase;
}

#corner ul.tools {
    float: left;
    list-style: none;
    height: 34px;
    margin: 0;
    padding: 0 0 0 2px;
    background: url(../images/top-sep-a.png) no-repeat;
    line-height: 33px;
    font-size: 1em;
    text-transform: uppercase;
}

#corner ul.tools li {
    position: relative;
    float: left;
}

#corner ul.tools li a {
    overflow: hidden;
    float: left;
    width: 26px;
    height: 34px;
    background: url(../images/top-tools-a.png) no-repeat;
    font-size: 1em;
    text-indent: -10001px;
}

#corner ul.tools li a.req_messages {
    position: relative;
    width: 24px;
    background-position: 0 0;
}

#corner ul.tools li a.req_messages:hover {
    background-position: 0 -34px;
}

#corner ul.tools li a.req_messages small {
    position: absolute;
    right: 0;
    top: 5px;
    padding: 3px 4px 2px;
    background: #333;
    background: rgba(0, 0, 0, 0.75);
    border-radius: 7px;
    -moz-border-radius: 7px;
    -webkit-border-radius: 7px;
    font-size: 0.9em;
    line-height: 1;
    font-weight: bold;
    text-shadow: #111 0 -1px 0;
    text-indent: 0;
}

#corner ul.tools li a.home {
    background-position: -22px 0;
}

#corner ul.tools li a.home:hover {
    background-position: -22px -34px;
}

#corner ul.tools li a.preferences {
    background-position: -70px 0;
}

#corner ul.tools li a.preferences:hover {
    background-position: -70px -34px;
}

#corner ul.tools li a.help {
    background-position: -94px 0;
}

#corner ul.tools li a.help:hover {
    background-position: -94px -34px;
}

#corner ul.tools li a.info {
    width: 25px;
    background-position: -118px 0;
}

#corner ul.tools li a.info:hover {
    background-position: -118px -34px;
}

#corner ul.tools li span.inline {
    display: -moz-inline-stack;
    display: inline-block;
    margin: 8px 5px 0;
    padding: 0 6px;
    border: 1px solid;
    border-color: #424141 #4c4a4a #5a5858;
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    background: #2a2a2a url(../images/top-inline-bg.png) repeat-x;
    color: #999;
    line-height: 17px;
    text-shadow: #111 0 -1px 0;
}

#corner ul.tools li#clear_cache a.clear_cache {
    float: left;
    width: 26px;
    height: 34px;
    background: url(../images/clear_cache.png) no-repeat;
}

#corner ul.tools li#clear_cache a.clear_cache {
    width: 24px;
    background-position: 0 0;
}

#corner ul.tools li#clear_cache a.clear_cache:hover {
    background-position: 0 -34px;
}

* html #corner ul.tools li span.inline {
    display: inline;
    zoom: 1;
}
/* ... */

